Tweaked styles a bit. Added JS dropdown menu on mobile layout. Working on gallery bugfix and navigation fixes

--- a/style.scss
+++ b/style.scss
@@ -1,13 +1,16 @@
+i{ font-family: 'FontAwesome' }
+
 a, a:visited, a:hover, a:active {
 	color: inherit;
   }
 
-body{
-    margin: 0px 0px;
-}
-
 p{
     margin: auto 10px;
+    text-align: center;
+}
+
+body{
+  margin: 0px 0px;
 }
 
 h1, h2, h3, h4{
@@ -19,11 +22,34 @@ h1, h2, h3, h4{
 
 footer{
   text-align: center;
+  background-color:rgb(41, 56, 104);
+  color: white;
 }
 
+/* Page logo styles */
+#logo-text{
+  background-image: linear-gradient(90deg, blue, white);
+  -webkit-background-clip: text;  /* Added for browsers that require webkit prefix to function */
+  background-clip: text;
+  color: transparent;
+  margin-bottom: 2.5rem;
+  margin-top: 2.5rem;
+  animation: glitch 2s 1s infinite;
+}
 
+/* keyframes for logo text */
+@keyframes glitch {
+  1%{
+    transform: rotateX(10deg) skewX(90deg);
+  }
+  2%{
+    transform: rotateX(0deg) skewX(0deg);
+  }
+} 
+
+/* First slideshow styles */
 .slideshow-container {
-  max-width: 800px;
+  max-width: 400px;
   position: relative;
   margin: auto;
 }
@@ -114,28 +140,146 @@ footer{
   to {opacity: 1}
 }
 
-#logo-text{
-  background-image: linear-gradient(90deg, blue, white);
-  -webkit-background-clip: text;  /* Added for browsers that require webkit prefix to function */
-  background-clip: text;
-  color: transparent;
-  margin-bottom: 2.5rem;
-  margin-top: 2.5rem;
-  animation: glitch 2s 1s infinite;
+/* Second slideshow styles */
+.slideshow-container2 {
+  max-width: 400px;
+  position: relative;
+  margin: auto;
 }
 
-/* keyframes for logo text */
-@keyframes glitch {
-  1%{
-    transform: rotateX(10deg) skewX(90deg);
-  }
-  2%{
-    transform: rotateX(0deg) skewX(0deg);
-  }
-} 
 
-/* Query targeting small phones and tablets */
+.mySlides2 {
+  display: none;
+}
+
+
+.prev2, .next2 {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: rgb(238, 1, 1);
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+
+.next2 {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+
+.prev2:hover, .next2:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+
+.text2 {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+
+.numbertext2 {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+
+.dot2 {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active2, .dot2:hover {
+  background-color: #717171;
+}
+
+/* Query targeting phones and tablets */
 @media screen and (max-width: 1023px){
+	
+  #navcontainer{
+		top: 0;
+		background:rgba(41, 56, 104, 0.925);
+    z-index: 1;
+    display: none;
+    min-width: 10%;
+    position: absolute;
+	}
+
+	#navcontainer ul{
+		list-style-type: none;
+	}
+	#navcontainer li{
+		color: white;
+    margin-top: 30px;
+	}
+
+  #navcontainer li:nth-child(2n - 1){
+    color: rgb(207, 207, 207);
+  }
+  #navcontainer li:last-child{
+    margin-bottom: 30px;
+  }
+
+	#navcontainer a{
+		text-decoration: none;
+	}
+
+  .fa.fa-bars{
+    margin-left: 10px;
+    margin-top: 10px;
+    cursor: pointer;
+    font-size: 30px;
+    background-image: linear-gradient(blue, white);
+    -webkit-background-clip: text;  /* Added for browsers that require webkit prefix to function */
+    background-clip: text;
+    color: transparent; 
+    display: inline;
+  }
+
+  #close{
+    display: none;
+    position: absolute;
+    cursor: pointer;
+    
+
+  h2{
+    background: rgb(41, 56, 104);
+    border-radius: 20px;
+    color: rgb(255, 255, 255);
+    margin: 10px 50px;
+  }
+}
+
+  .slideshow-container{
+  }
+
+  .dot{
+  }
+
+/* Query targeting laptops and desktops */
+@media screen and (min-width: 1024px){
 
 	#navcontainer{
 		position: -webkit-sticky; /** webkit for Safari browser **/
@@ -168,18 +312,12 @@ footer{
     display: none;
   }
 
-  h2{
-      background: rgb(41, 56, 104);
-      border-radius: 20px;
-      color: rgb(255, 255, 255);
-      margin: 10px 50px;
-    }
+  .fas.fa-times{
+    display: none;
+  }
 
-  
 
-}
-
-/*Query targeting tablets and larger devices to be implemented later
+/*Query targeting tablets to be implemented later*/
 @media screen and (min-width: 701px){
 	#logo{
 		width: 100%;
@@ -189,48 +327,4 @@ footer{
 		display: none;
 	}
 	
-}
-*/
-
-@media screen and (min-width: 1024px){
-	
-  #navcontainer{
-		top: 0;
-		background:rgba(41, 56, 104, 0.925);
-    z-index: 1;
-    display: none;
-    flex-wrap: wrap;
-    width: 10%;
-    justify-content: left;
-    position: absolute;
-	}
-
-	#navcontainer ul{
-		list-style-type: none;
-	}
-	#navcontainer li{
-		color: white;
-    margin-top: 30px;
-	}
-
-  #navcontainer li:nth-child(2n - 1){
-    color: rgb(207, 207, 207);
-  }
-  #navcontainer li:last-child{
-    margin-bottom: 30px;
-  }
-
-	#navcontainer a{
-		text-decoration: none;
-	}
-
-  .fa.fa-bars{
-    display: none;
-  }
-
-  .slideshow-container{
-  }
-
-  .dot{
-  }
 }
